[tool.poetry]
name = "magical-unique-number"
version = "0.1.0"
description = "Least unique positive integer game implementation."
authors = ["Daniel Hatas <hatasdani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pylint = "^2.5.3"
autopep8 = "^1.5.3"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
